--- a/cms/static/cms/sass/settings/_cms.scss
+++ b/cms/static/cms/sass/settings/_cms.scss
@@ -33,7 +33,7 @@ $black: var(--dca-black);
        --dca-primary: #58D1FC;
        --dca-gray: #999; //$gray-light;
        --dca-gray-lightest: #444; //$gray-darkest;
-       --dca-gray-lighter: #777; //$gray-darker;
+       --dca-gray-lighter: #666; //$gray-darker;
        --dca-gray-light: #888; // $gray-light;
        --dca-gray-darker: #aaa; //$gray;
        --dca-gray-darkest: #eee; // $gray-lighter;
